Add refresh-nft
